Exercici Seminari Angular 6

--- a/src/app/colaboradores/colaboradores.component.html
+++ b/src/app/colaboradores/colaboradores.component.html
@@ -11,7 +11,7 @@
 
     <div *ngIf="users.length > 0">
         <div *ngFor="let user of (users | nombre:query); let i = index; trackBy: trackByUserId">
-            <h2 (click)="changeName(user.name)">Nombre del usuario: {{user.name}}</h2>
+            <h2 (click)="changeName(user.name || '')">Nombre del usuario: {{user.name}}</h2>
             <p>Edad del usuario: {{user.age}}</p>
             <p>Email del usuario: {{user.email}}</p>
             <button (click)="deleteUser(i)" class="listar-boton">
