--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,1 @@
-@if(loggedin)
-{
-    <app-usuario></app-usuario>
-}
-@else  {
-    <app-login (exportLoggedIn)="getLoggedIn($event)"></app-login>
-}
-
-<router-outlet />
+<router-outlet></router-outlet>
